--- a/components/quiz.html
+++ b/components/quiz.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="UTF-8">
         <meta content="text/html; charset=utf-8" http-equiv="Content-Type">
-        <title>Image · ISLE Editor Documentation</title>
+        <title>Quiz · ISLE Editor Documentation</title>
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="description" content="">
         <meta name="generator" content="GitBook 3.2.2">
@@ -61,10 +61,10 @@
     <link rel="shortcut icon" href="../gitbook/images/favicon.ico" type="image/x-icon">
 
     
-    <link rel="next" href="tex.html" />
+    <link rel="next" href="free-text-question.html" />
     
     
-    <link rel="prev" href="iframe.html" />
+    <link rel="prev" href="../chapters/question.html" />
     
 
     </head>
@@ -257,7 +257,7 @@
             <ul class="articles">
                 
     
-        <li class="chapter " data-level="1.4.5.1" data-path="quiz.html">
+        <li class="chapter active" data-level="1.4.5.1" data-path="quiz.html">
             
                 <a href="quiz.html">
             
@@ -982,7 +982,7 @@
             
         </li>
     
-        <li class="chapter active" data-level="1.4.18.2" data-path="image.html">
+        <li class="chapter " data-level="1.4.18.2" data-path="image.html">
             
                 <a href="image.html">
             
@@ -1326,7 +1326,7 @@
     <!-- Title -->
     <h1>
         <i class="fa fa-circle-o-notch fa-spin"></i>
-        <a href=".." >Image</a>
+        <a href=".." >Quiz</a>
     </h1>
 </div>
 
@@ -1341,7 +1341,36 @@
     
                                 <section class="normal markdown-section">
                                 
-                                <h1 id="image">Image</h1>
+                                <h1 id="quiz">Quiz</h1>
+<p>A quiz component displaying a sequence of question components.</p>
+<h4 id="example">Example:</h4>
+<pre class="language-"><code class="lang-js"><span class="token operator">&lt;</span>Quiz
+    count<span class="token operator">=</span><span class="token punctuation">{</span><span class="token number">2</span><span class="token punctuation">}</span>
+    questions<span class="token operator">=</span><span class="token punctuation">{</span><span class="token punctuation">[</span>
+        <span class="token operator">&lt;</span>RangeQuestion
+            question<span class="token operator">=</span><span class="token string">&quot;Approximately in which range lie 99% of observations drawn from a standard normal distribution?&quot;</span>
+            solution<span class="token operator">=</span><span class="token punctuation">{</span><span class="token punctuation">[</span><span class="token operator">-</span><span class="token number">3</span><span class="token punctuation">,</span><span class="token number">3</span><span class="token punctuation">]</span><span class="token punctuation">}</span>
+        <span class="token operator">/</span><span class="token operator">&gt;</span><span class="token punctuation">,</span>
+        <span class="token operator">&lt;</span>NumberQuestion
+            question<span class="token operator">=</span><span class="token string">&quot;What is the number PI - three digits after the period&quot;</span>
+            solution<span class="token operator">=</span><span class="token punctuation">{</span>Math<span class="token punctuation">.</span><span class="token constant">PI</span><span class="token punctuation">}</span>
+            digits<span class="token operator">=</span><span class="token punctuation">{</span><span class="token number">3</span><span class="token punctuation">}</span>
+        <span class="token operator">/</span><span class="token operator">&gt;</span>
+    <span class="token punctuation">]</span><span class="token punctuation">}</span>
+<span class="token operator">/</span><span class="token operator">&gt;</span>
+</code></pre>
+<p><a href="https://isle.heinz.cmu.edu/components/quiz/" target="_blank">Open interactive preview</a></p>
+<h4 id="options">Options:</h4>
+<ul>
+<li><strong>confidence</strong> | <code>boolean</code>: whether to display a Likert scale asking for the confidence of the user&apos;s answer. Default: <code>false</code>.</li>
+<li><strong>forceConfidence</strong> | <code>boolean</code>: controls whether a user has to supply a confidence level before moving to the next question. Default: <code>false</code>.</li>
+<li><strong>count</strong> | <code>number (required)</code>: number of questions to include in the quiz. Default: <code>none</code>.</li>
+<li><strong>questions</strong> | <code>array (required)</code>: array of questions from which questions will be randomly selected. Default: <code>none</code>.</li>
+<li><strong>active</strong> | <code>boolean</code>: controls whether the timer for the quiz is active. Default: <code>true</code>.</li>
+<li><strong>duration</strong> | <code>number</code>: duration of the quiz; once time is up, the summary page will be displayed. Default: <code>none</code>.</li>
+<li><strong>skippable</strong> | <code>boolean</code>: controls whether questions in  the quiz are skippable. Default: <code>true</code>.</li>
+<li><strong>onFinished</strong> | <code>function</code>: callback invoked when the quiz is finished and the results page is displayed. Default: <code>onFinished() {}</code>.</li>
+</ul>
 
                                 
                                 </section>
@@ -1369,12 +1398,12 @@
 
             
                 
-                <a href="iframe.html" class="navigation navigation-prev " aria-label="Previous page: IFrame">
+                <a href="../chapters/question.html" class="navigation navigation-prev " aria-label="Previous page: Question">
                     <i class="fa fa-angle-left"></i>
                 </a>
                 
                 
-                <a href="tex.html" class="navigation navigation-next " aria-label="Next page: LaTeX Equations">
+                <a href="free-text-question.html" class="navigation navigation-next " aria-label="Next page: Free Text Question">
                     <i class="fa fa-angle-right"></i>
                 </a>
                 
@@ -1385,7 +1414,7 @@
     <script>
         var gitbook = gitbook || [];
         gitbook.push(function() {
-            gitbook.page.hasChanged({"page":{"title":"Image","level":"1.4.18.2","depth":3,"next":{"title":"LaTeX Equations","level":"1.4.18.3","depth":3,"path":"components/tex.md","ref":"components/tex.md","articles":[]},"previous":{"title":"IFrame","level":"1.4.18.1","depth":3,"path":"components/iframe.md","ref":"components/iframe.md","articles":[]},"dir":"ltr"},"config":{"plugins":["expandable-chapters","prism","-highlight"],"root":"./docs","styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"pluginsConfig":{"fontsettings":{"theme":"white","family":"sans","size":2},"expandable-chapters":{},"prism":{},"search":{},"lunr":{"maxIndexSize":1000000,"ignoreSpecialCharacters":false},"sharing":{"facebook":true,"twitter":true,"google":false,"weibo":false,"instapaper":false,"vk":false,"all":["facebook","google","twitter","weibo","instapaper"]},"theme-default":{"styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"showLevel":false}},"theme":"default","author":"Philipp Burckhardt","pdf":{"pageNumbers":true,"fontSize":12,"fontFamily":"Arial","paperSize":"a4","chapterMark":"pagebreak","pageBreaksBefore":"/","margin":{"right":62,"left":62,"top":56,"bottom":56}},"structure":{"langs":"LANGS.md","readme":"README.md","glossary":"GLOSSARY.md","summary":"SUMMARY.md"},"variables":{},"title":"ISLE Editor Documentation","gitbook":"*","description":"Documentation of the ISLE editor, a desktop application for authoring lessons for the Interactive Statistics Learning Environment (ISLE)"},"file":{"path":"components/image.md","mtime":"2018-10-08T00:58:44.418Z","type":"markdown"},"gitbook":{"version":"3.2.2","time":"2018-10-08T01:04:00.394Z"},"basePath":"..","book":{"language":""}});
+            gitbook.page.hasChanged({"page":{"title":"Quiz","level":"1.4.5.1","depth":3,"next":{"title":"Free Text Question","level":"1.4.5.2","depth":3,"path":"components/free-text-question.md","ref":"components/free-text-question.md","articles":[]},"previous":{"title":"Question","level":"1.4.5","depth":2,"path":"chapters/question.md","ref":"chapters/question.md","articles":[{"title":"Quiz","level":"1.4.5.1","depth":3,"path":"components/quiz.md","ref":"components/quiz.md","articles":[]},{"title":"Free Text Question","level":"1.4.5.2","depth":3,"path":"components/free-text-question.md","ref":"components/free-text-question.md","articles":[]},{"title":"Match List Question","level":"1.4.5.3","depth":3,"path":"components/match-list-question.md","ref":"components/match-list-question.md","articles":[]},{"title":"Multiple Choice Question","level":"1.4.5.4","depth":3,"path":"components/multiple-choice-question.md","ref":"components/multiple-choice-question.md","articles":[]},{"title":"Number Question","level":"1.4.5.5","depth":3,"path":"components/number-question.md","ref":"components/number-question.md","articles":[]},{"title":"Order Question","level":"1.4.5.6","depth":3,"path":"components/order-question.md","ref":"components/order-question.md","articles":[]},{"title":"Range Question","level":"1.4.5.7","depth":3,"path":"components/range-question.md","ref":"components/range-question.md","articles":[]},{"title":"Select Question","level":"1.4.5.8","depth":3,"path":"components/select-question.md","ref":"components/select-question.md","articles":[]}]},"dir":"ltr"},"config":{"plugins":["expandable-chapters","prism","-highlight"],"root":"./docs","styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"pluginsConfig":{"fontsettings":{"theme":"white","family":"sans","size":2},"expandable-chapters":{},"prism":{},"search":{},"lunr":{"maxIndexSize":1000000,"ignoreSpecialCharacters":false},"sharing":{"facebook":true,"twitter":true,"google":false,"weibo":false,"instapaper":false,"vk":false,"all":["facebook","google","twitter","weibo","instapaper"]},"theme-default":{"styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"showLevel":false}},"theme":"default","author":"Philipp Burckhardt","pdf":{"pageNumbers":true,"fontSize":12,"fontFamily":"Arial","paperSize":"a4","chapterMark":"pagebreak","pageBreaksBefore":"/","margin":{"right":62,"left":62,"top":56,"bottom":56}},"structure":{"langs":"LANGS.md","readme":"README.md","glossary":"GLOSSARY.md","summary":"SUMMARY.md"},"variables":{},"title":"ISLE Editor Documentation","gitbook":"*","description":"Documentation of the ISLE editor, a desktop application for authoring lessons for the Interactive Statistics Learning Environment (ISLE)"},"file":{"path":"components/quiz.md","mtime":"2018-10-08T00:58:44.502Z","type":"markdown"},"gitbook":{"version":"3.2.2","time":"2018-10-08T01:04:00.394Z"},"basePath":"..","book":{"language":""}});
         });
     </script>
 </div>
